add gc loggings